kuttl-tests/tests/advanced-routing/00-assert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: advanced-routing-test
status:
  phase: Active
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: advanced-gateway
  namespace: advanced-routing-test
