kuttl-tests/tests/advanced-routing/01-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-v1
  namespace: advanced-routing-test
status:
  availableReplicas: 2
  readyReplicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-v2
  namespace: advanced-routing-test
status:
  availableReplicas: 2
  readyReplicas: 2
